# pdf-processor

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt
.github/workflows/: python-publish.yml  python-test.yml
pdf_processor/: __init__.py  processor.py
tests/: __init__.py  create_test_pdf.py
