[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf-processor"
version = "0.1.0"
authors = [{ name = "zhanghanlin", email = "hanlin.zhang@lingostar.me" }]
description = "A PDF processing tool"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "optional-dependencies"]
[tool.setuptools.dynamic]
optional-dependencies = { dev = { file = ["requirements-dev.txt"] } }
dependencies = { file = ["requirements.txt"] }
[project.urls]
"Homepage" = "https://github.com/yourusername/pdf-processor"
"Bug Tracker" = "https://github.com/yourusername/pdf-processor/issues"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
